--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
-<body></body>
-<script type="text/javascript">
-	location.href = "../html/index.html";
-</script>
+<body>
+	<h1>hello ,this is in html</h1>
+</body>
 </html>
