--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Welcome to MyFirstWebsite ! ^_^</title>
+	<link rel="shortcut icon" href="./favicon.ico" >
 </head>
 <body></body>
 <script type="text/javascript">
-	location.href = "../html/index.html";
+	var href = location.href;
+	location.href = href + "/../html/index.html";
 </script>
 </html>
