--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     </style>
 </head>
-<body style="background: url(http://c.hiphotos.baidu.com/zhidao/pic/item/63d9f2d3572c11df3b751edb612762d0f603c2a6.jpg) no-repeat fixed center;">
+<body style="background: url(./img/background.jpg) no-repeat fixed center;">
 	<div id="menu" style="position: fixed;top: 50%;left: 50%;">
 		<ul style="position: relative;margin-top: -50%;margin-left: -50%;display: inline-block;">
 			<li onclick="gotoPage('pc');">
