--- a/html/mobile.html
+++ b/html/mobile.html
@@ -5,18 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>PC项目</title>
-	<link rel="shortcut icon" href="./favicon.ico" >
+    <title>mobile项目</title>
+	<link rel="shortcut icon" href="../favicon.ico" >
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <!-- 自己的样式 -->
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<div style="text-align: center;">
-		<ul>
-			<li>这是MOBILE列表页</li>
-		</ul>
+	<div class="text-left">
+        <h2>我的项目列表:</h2>
+        <ul class="list-unstyled" style="margin-left: 50px;font-size: 24px;">
+            <li>暂无我的手机项目<a href="../index.html"></a></li>
+        </ul>
 	</div>
 
+    <!-- 自己的js -->
+    <script type="text/javascript" src="../js/public.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
