--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Welcome to MyFirstWebsite ! ^_^</title>
+    <title>Welcome to Website ! ^_^</title>
 	<link rel="shortcut icon" href="./favicon.ico" >
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
+    <!-- 自己的样式 -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <style type="text/css">
     #menu ul li{
@@ -20,13 +21,13 @@
     	cursor: pointer;
     	display: inline-block;
     	text-align: center;
-    	padding: 50px;
+    	margin: 50px;
     }
     </style>
 </head>
 <body style="background: url(./img/background.jpg) no-repeat fixed center;">
-	<div id="menu" style="position: fixed;top: 50%;left: 50%;">
-		<ul style="position: relative;margin-top: -50%;margin-left: -50%;display: inline-block;">
+	<div id="menu" style="text-align: center;margin-top: 5%;">
+		<ul>
 			<li onclick="gotoPage('pc');">
 				<img src="./img/iconfont-pc.png" style="margin: 10px 30px;">
 				<div>PC</div>
@@ -42,13 +43,14 @@
 		</ul>
 	</div>
 	
-	<div style="position: fixed;right: 30px;top: 30px;">
+	<div style="position: absolute;right: 30px;top: 30px;">
 		<img src="./img/iconfont-jianli.png" style="width: 32px;"> <a href="./data/myself.html" style="color: aquamarine;">预览简历</a>
 		<img src="./img/iconfont-xiazaijianli.png" style="width: 32px;"> <a href="./data/myself.doc" style="color: aquamarine;">下载简历</a>
 	</div>
 
 
-	<script type="text/javascript" src="./js/public.js"></script>
+    <!-- 自己的js -->
+    <script type="text/javascript" src="./js/public.js"></script>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
