--- a/html/demo.html
+++ b/html/demo.html
@@ -5,21 +5,157 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>PC项目</title>
-	<link rel="shortcut icon" href="./favicon.ico" >
+    <title>练习项目</title>
+	<link rel="shortcut icon" href="../favicon.ico" >
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- 自己的样式 -->
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-<body>
-	<div style="text-align: center;">
-		<ul>
-			<li>这是DEMO列表页</li>
+<body style="background-color: antiquewhite;padding:0 50px 1000px;">
+	<div class="text-left">
+        <h2>我的项目列表:</h2>
+		<ul class="list-unstyled">
+            <li>
+                <h2 href="#bootstrap"> <a href="#bootstrap">Bootstrap基础</a> </h2>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2268">标题（一）</a> </h3>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2274">标题（二）</a> </h3>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2275">段落（正文文本）</a> </h3>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2276">强调内容</a> </h3>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2279">强调相关的类</a> </h3>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2280">文本对齐风格</a> </h3>
+                <h3 style="text-indent: 50px;"><a href="#bootstrap2281">列表</a> </h3>
+                <hr class="hr" />
+            </li>
+            <li>
+                <h2 href="#bootstrap"> <a href="#jiugong">九宫格转盘</a> </h2>
+                <hr class="hr" />
+            </li>
 		</ul>
 	</div>
+    
+    <!-- 对应的练习项目-->
+    <div id="bootstrap">
+        <h3>Bootstrap基础</h3>
+        <ul class="list-unstyled">
+            <li id="bootstrap2268">
+                <h4 class="demo-title">标题（一）</h4>
+                <p></p>
+                <pre class="demo-pre">
+                    <!--Bootstrap中让非标题元素和标题使用相同的样式-->
+                    <div class="h1">Bootstrap标题一</div>
+                    <div class="h2">Bootstrap标题二</div>
+                    <div class="h3">Bootstrap标题三</div>
+                    <div class="h4">Bootstrap标题四</div>
+                    <div class="h5">Bootstrap标题五</div>
+                    <div class="h6">Bootstrap标题六</div>
+                    <h1>我的第一个bootstrap标题</h1>
+                </pre>
+            </li>
+            <li id="bootstrap2274">
+                <h4 class="demo-title">标题（二）</h4>
+                <p></p>
+                <pre class="demo-pre">
+                    <!--Bootstrap中让非标题元素和标题使用相同的样式-->
+                    <h1>Bootstrap标题一<small>我是副标题</small></h1>
+                    <h2>Bootstrap标题二<small>我是副标题</small></h2>
+                    <h3>Bootstrap标题三<small>我是副标题</small></h3>
+                    <h4>Bootstrap标题四<small>我是副标题</small></h4>
+                    <h5>Bootstrap标题五<small>我是副标题</small></h5>
+                    <h6>Bootstrap标题六<small>我是副标题</small></h6>
+                    <h1>孤儿院无私奉献30年  <small>一曲人性的赞歌</small></h1>
+                </pre>
+            </li>
+            <li id="bootstrap2275">
+                <h4 class="demo-title">段落（正文文本）</h4>
+                <p></p>
+                <pre class="demo-pre">
+                    <!--Bootstrap中让非标题元素和标题使用相同的样式-->
+                    <p>我是一个段落，你猜我在Bootstrap是以什么样的风格显示。</p>
+                </pre>
+            </li>
+            <li id="bootstrap2276">
+                <h4 class="demo-title">强调内容</h4>
+                <p></p>
+                <pre class="demo-pre">
+                    <p>我是一个普通的段落，我不需要强调显示</p>
+                    <p class="lead">这部分内容需要特别的强调，我和别人长得不一样</p>
+                </pre>
+            </li>
+            <li id="bootstrap2279">
+                <h4 class="demo-title">强调相关的类</h4>
+                <p></p>
+                <pre class="demo-pre">
+                    <div class="text-muted">.text-muted 效果</div>
+                    <div class="text-primary">.text-primary效果</div>
+                    <div class="text-success">.text-success效果</div>
+                    <div class="text-info">.text-info效果</div>
+                    <div class="text-warning">.text-warning效果</div>
+                    <div class="text-danger">.text-danger效果</div>
+                </pre>
+            </li>
+            <li id="bootstrap2280">
+                <h4 class="demo-title">文本对齐风格</h4>
+                <p></p>
+                <pre class="demo-pre">
+                    <p class="text-left">我居左</p>
+                    <p class="text-center">我居中</p>
+                    <p class="text-right">我居右</p>
+                    <p class="text-justify">我是居中对齐 There is clearly a need for CSS to be taken seriously by graphic artists. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The code remains the same, the only thing that has changed is the external .css file. </p>
+                </pre>
+            </li>
+            <li id="bootstrap2281">
+                <h4 class="demo-title">列表</h4>
+                <p>Bootstrap根据平时的使用情形提供了六种形式的列表：☑  普通列表 ☑  有序列表 ☑  去点列表 ☑  内联列表 ☑  描述列表 ☑  水平描述列表</p>
+                <pre class="demo-pre">
+                    <ul class="list-unstyled">
+                        <li>城市：</li>
+                        <li>
+                            <ul class="list-inline">
+                                <li>北京</li>
+                                <li>上海</li>
+                                <li>南京</li>
+                                <li>厦门</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <dl>
+                        <dt>北京</dt>
+                        <dd>北京是中国的首都，是政治文化集中地</dd>
+                        <dt>上海</dt>
+                        <dd>上海号称东方的巴黎</dd>
+                    </dl>
+                </pre>
+            </li>
+        </ul>
+    </div>
+    <div id="jiugong">
+        <h3>九宫格转盘</h3>
+        <ul class="list-inline">
+            <li class="mengceng" data-num="1"> <img src="../img/iconfont-pc.png"> </li>
+            <li data-num="2"> <img src="../img/iconfont-mobile.png"> </li>
+            <li data-num="3"> <img src="../img/iconfont-iconother.png"> </li>
+            <li data-num="4"> <img src="../img/iconfont-mobile.png"> </li>
+            <li data-num="5" class="jiugongbtn" style="cursor: pointer;text-align: center;"> <img src="../img/iconfont-kaishi.png" style="width: 50%;"> </li>
+            <li data-num="6"> <img src="../img/iconfont-pc.png"> </li>
+            <li data-num="7"> <img src="../img/iconfont-iconother.png"> </li>
+            <li data-num="8"> <img src="../img/iconfont-pc.png"> </li>
+            <li data-num="9"> <img src="../img/iconfont-mobile.png"> </li>
+        </ul>
+    </div>
+
+    <div style="position: fixed;bottom: 50px;right: 50px;display: none;padding: 20px;background-color:white;" id="gotop">
+        <a href="#"><img src="../img/iconfont-fanhuidingbu.png" style="width: 32px;"></a>
+    </div>
+
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!-- 自己的js -->
+    <script type="text/javascript" src="../js/demo.js"></script>
+    <script type="text/javascript" src="../js/public.js"></script>
 </body>
 </html>
