--- a/html/demo.html
+++ b/html/demo.html
@@ -142,7 +142,9 @@
                 <li data-num="2"> <img src="../img/iconfont-mobile.png"> </li>
                 <li data-num="3"> <img src="../img/iconfont-iconother.png"> </li>
                 <li data-num="4"> <img src="../img/iconfont-mobile.png"> </li>
-                <li data-num="5" class="jiugongbtn" style="cursor: pointer;text-align: center;"> <img src="../img/iconfont-kaishi.png" style="width: 50%;"> </li>
+                <li data-num="5" class="jiugongbtn" style="cursor: pointer;text-align: center;"> 
+                    <img src="../img/iconfont-kaishi.png" style="width: 50%;"> 
+                </li>
                 <li data-num="6"> <img src="../img/iconfont-pc.png"> </li>
                 <li data-num="7"> <img src="../img/iconfont-iconother.png"> </li>
                 <li data-num="8"> <img src="../img/iconfont-pc.png"> </li>
