--- a/data/myself.html
+++ b/data/myself.html
@@ -401,9 +401,9 @@ content:"...";
 								<!-- 如果用户选择的身份是教育经历 -->
 									<span class="shenfen">
 										<i></i>
-										学员 · 河南（洛阳）惠普产业人才培训基地
+										计算机科学与技术 · 黄河科技学院
 									</span>
-								<!-- 否则根据用户是否是应届毕业生区分用户的身份 -->
+								<!-- 如果用户选择的身份是工作经历 -->
 						</div>						
 						<div class="info_t">
 							<span class="base_info"><i></i>男&nbsp;&nbsp;&nbsp;23岁&nbsp;&nbsp;&nbsp;本科
@@ -492,6 +492,23 @@ content:"...";
 								</div>
 							</div>
 							<div class="mr_moudle_content" id="projectList">
+								<div class="mr_jobe_list">
+								<div class="clearfixs">
+									<div class="mr_content_l">
+										<div class="l2">
+											<a class="projectTitle"  target="_blank" href="http://chentingjun.github.io/MyWebsite/"><span></span>自己的闲暇时的练习</a>
+											<p>做一个自己的精美的网站</p>
+										</div>
+									</div>
+									
+									<div class="mr_content_r">
+										<span>2016.01 -- 2016.02</span>
+									</div>							
+								</div>
+								<div class="mr_content_m olpf">
+									<p>又一年末，时光在流逝，但是在那段时光中的奋斗、努力与收获不应遗忘，那是我的动力，那是属于我的见证，需要好好的把学到的技术、知识系统的归列归档一下，总结学到的，以后可能会用到的，也是对自己的技术的综合运行，希望能做一个属于自己的，精美的网站，也许现在还不够好，但我会继续做下去...<br /></p>
+								</div>	
+								</div>	
 								<div class="mr_jobe_list">
 								<div class="clearfixs">
 									<div class="mr_content_l">
@@ -599,6 +616,19 @@ content:"...";
 								</div>
 							</div>
 							<div class="mr_moudle_content">
+								<div class="mr_work_online">
+									<div class="mr_wo_show">
+										<div>
+											<div class="mr_c_r_t">
+												&nbsp;
+											</div>	
+										</div>
+										<div class="mr_self_site">
+                                            <a class="mr_self_sitelink" href="http://t.cn/RG0OzPt" target="_blank">http://t.cn/RG0OzPt</a>
+										</div>
+										<div class="mr_wo_preview olpf"><p>我自己的网站总结--所学、所练</p></div>
+									</div>																
+								</div>
 								
 							</div>	
 						</div>
@@ -620,7 +650,9 @@ content:"...";
 									<img src="http://www.lagou.com/image1/M00/0F/0E/CgYXBlT8fIuAGrbsAAAoH-hDXRE452.jpg" alt="陈廷俊"/>
 								</div>	
 								<div class="mr_self_r">
-									<p>我是一个实事求是的人，心思缜密，有较强的学习能力，有良好的职业道德素质和团队协作精神。系统地掌握了本专业内基础知识技能，并能熟练运用Java、C语言等编程语言及ALM、UFT和HP LoadRunner等测试工具。虽然刚走出校门，但我对IT行业有浓厚的兴趣，我诚恳地希望加入贵公司，自愿从公司基层做起，刻苦用功、谦虚好学、勇于创新，积极地将满腔热血投入到自己深爱的工作中去，为贵公司竭尽所能。</p> 								
+									<p> </p>
+<p>我是一个心思缜密，有较强的学习能力的人，有着良好的职业道德素质和团队协作精神。对代码有种由衷的亲切感，有着规范的代码编写习惯，能熟练的使用html/css/js等技术，我曾独立完成过手机端web插件的开发，对ajax和json能够熟练的使用，在过去也经常维护手机端的代码，对移动web有着更深的了解。我相信，我的能力可以为这份工作提供有力的保证。</p>
+<p> </p> 								
 								</div>														
 							</div>						
 						</div>
