--- a/html/pc.html
+++ b/html/pc.html
@@ -16,7 +16,9 @@
 	<div class="text-left">
         <h2>我的项目列表:</h2>
 		<ul class="list-unstyled" style="margin-left: 50px;font-size: 24px;">
-			<li><a href="http://chentingjun.github.io/myself/">myself</a></li>
+            <li><a href="http://chentingjun.github.io/myself/">myself</a></li>
+            <li><a href="./baidu.html">百度</a></li>
+			<li><a href="./submit/index.html">一个表单</a></li>
 		</ul>
 	</div>
 
